<resources>
    <string name="app_name">NewsApp</string>
    <string name="top_stories_label">Top Stories</string>
    <string name="news_label">News</string>
    <string name="detail_image_desc">News detail image</string>
    <string name="related_news_label">Related News</string>
    <string name="related_news_list_desc">List of related news articles</string>
    <string name="top_stories_list_desc">Horizontal list of top news stories</string>
    <string name="news_list_desc">Vertical list of news articles</string>
    <string name="top_story_image_desc">Top story image</string>
    <string name="top_story_title_desc">Top story title</string>
</resources>
